2015-02-18  Mark Wielaard  <mjw@redhat.com>

	* newdata.c (check_section_data): Use PRId64 for printing loff_t.

2015-02-11  Josh Stone  <jistone@redhat.com>

	* backtrace.c (exec_dump): Initialize jmp.

2015-02-11  Petr Machata  <pmachata@redhat.com>

	* run-dwarf-ranges.sh: New test.
	* dwarf-ranges.c: New file.
	* debug-ranges-no-lowpc.s, debug-ranges-no-lowpc.o.bz2: New test case.

2015-01-21  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (check_PROGRAMS): Add elfstrtab.
	(TESTS): Likewise.
	(elfstrtab_LDADD): New variable.
	* elfstrtab.c: New test.

2015-01-20  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (check_PROGRAMS): Add newdata.
	(TESTS): Likewise.
	(newdata_LDADD): new variable.
	* newdata.c: New test.

2015-01-20  Mark Wielaard  <mjw@redhat.com>

	* strptr.c: New file.
	* run-strptr.sh: New test.
	* Makefile.am (check_PROGRAMS): Add strptr.
	(TESTS): Add run-strptr.sh.
	(EXTRA_DIST): Likewise.
	(strptr_LDADD): New variable.

2015-01-15  Mark Wielaard  <mjw@redhat.com>

	* deleted.c (main): Call prctl(PR_SET_PTRACER, PR_SET_PTRACER_ANY).
	* vdsosyms.c (main): Use getpid () instead of getppid ().

2014-12-27  Mark Wielaard  <mjw@redhat.com>

	* addrscopes.c (handle_address): Last address in scope is highpc - 1.
	* funcscopes.c (handle_function): Likewise.
	* run-addrscopes.sh: Adjust last address in scope.
	* run-funcscopes.sh: Likewise.

2015-01-07  Mark Wielaard  <mjw@redhat.com>

	* run-addrcfi.sh: Add test for ppc32 eh_frame_hdr address search.

2015-01-14  Mark Wielaard  <mjw@redhat.com>

	* testfile-debug-types.bz2: New testfile.
	* Makefile.am (EXTRA_DIST): Add testfile-debug-types.bz2.
	* typeiter2.c (main): Print both name and offset of found form DIE.
	* run-typeiter.s: Adjust output and add testfile-debug-types.

2014-12-26  Mark Wielaard  <mjw@redhat.com>

	* run-test-archive64.sh: Add nm test.

2014-12-19  Mark Wielaard  <mjw@redhat.com>

	* run-deleted.sh: Don't check libfunc on ppc64.

2014-12-19  Mark Wielaard  <mjw@redhat.com>
